# Jianji

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  backup-lib.cpp
app/src/main/res/drawable/: account_balance_wallet.xml  account_balance_wallet_300.xml  account_balance_wallet_thin.xml  add.xml  apparel_regular.xml  apparel_thin.xml  arrow_back.xml  billing_account_balance.xml  calendar_current_day.xml  calendar_day_ripple.xml  calendar_month.xml  calendar_no_billing.xml  calendar_no_billing_dark.xml  collect_empty_hint.xml  default_wallet_tag.xml  delete.xml  done_all.xml  edit.xml  edit_calendar.xml  edit_note.xml  edit_note_300.xml  flight_takeoff.xml  forward.xml  home_regular.xml  home_thin.xml  ic_launcher_foreground.xml  insert_chart.xml  lunch_dining.xml  lunch_dining_regular.xml  lunch_dining_thin.xml  medication.xml  medication_regular.xml  medication_thin.xml  more_vert.xml  pets.xml  pets_regular.xml  pets_thin.xml  photo_camera.xml  remove_billing_icon.xml  schedule.xml  (+17 more)
app/src/main/res/drawable-night/: side_nav_bar.xml
app/src/main/res/layout/: activity_billing_info.xml  activity_create_billing.xml  activity_favorite_billing.xml  activity_picture_viewer.xml  activity_scheduled_plan.xml  activity_scheduled_plan_create.xml  activity_wallet_manage.xml  app_bar_main.xml  billing_empty_view.xml  billing_info_item.xml  billing_item.xml  calendar_day_layout.xml  calendar_day_title_text.xml  (+19 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+70 files in other folders)
